WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303838
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-block-in-inline-end-002.html -003.html and -004.html
https://bugs.webkit.org/show_bug.cgi?id=303838
Summary
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-bo...
alan
Reported
2025-12-09 07:37:30 PST
see
https://github.com/WebKit/WebKit/pull/55086
Attachments
[fast-cq]Patch
(1.83 KB, patch)
2025-12-09 07:40 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-09 07:40:30 PST
Created
attachment 477677
[details]
[fast-cq]Patch
EWS
Comment 2
2025-12-09 10:29:09 PST
Committed
304169@main
(c0c062526c52): <
https://commits.webkit.org/304169@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477677
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-12-09 10:30:15 PST
<
rdar://problem/166156813
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug