[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-inline/text-box-trim/text-box-trim-block-in-inline-end-002.html -003.html and -004.html https://bugs.webkit.org/show_bug.cgi?id=303838

Reviewed by Antti Koivisto.

With no intermediate anon-blocks, now this enclosing block box can very well be the box
we are looking for (this codepath always picked up the anon block before).

* Source/WebCore/rendering/TextBoxTrimmer.cpp:
(WebCore::lastFormattedLineRoot):

Canonical link: https://commits.webkit.org/304169@main